syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstPromotionTypeNameTableItemExProtobuf";

message	ConstPromotionTypeNameTableItemEx  {
	optional	uint32	type = 1;
	optional	string	name = 2;
	optional	uint32	q = 3;
	optional	uint32	group = 4;
	optional	string	group_name = 5;
}